Use template grid for columns in ground-failure

--- a/src/app/ground-failure/about/about.component.html
+++ b/src/app/ground-failure/about/about.component.html
@@ -34,7 +34,7 @@
 </div>
 
 <div class="row">
-  <div class="mobile-one-of-one one-of-two column">
+  <div class="one-of-two column">
     <h3>Landslides</h3>
     <p>
       Landslides are commonly triggered by earthquakes in mountainous or
@@ -51,7 +51,7 @@
       mobilized into hazardous debris flows.
     </p>
   </div>
-  <div class="mobile-one-of-one one-of-two column">
+  <div class="one-of-two column">
     <h3>Liquefaction</h3>
     <p>
       Liquefaction is the loss of strength of loose, saturated soils caused by
