--- a/src/app/executive/shakemap-pin/shakemap-pin.component.scss
+++ b/src/app/executive/shakemap-pin/shakemap-pin.component.scss
@@ -1,8 +1,7 @@
+dl {
+  margin: 0;
+}
 
-shared-map {
-  display: block;
-  height: 200px;
-  max-height: 100%;
-  width: 100%;
-  pointer-events: none;
+dt {
+  font-weight: bold;
 }
