Fix routing and title for tab

--- a/src/app/shakemap/shakemap/shakemap.component.html
+++ b/src/app/shakemap/shakemap/shakemap.component.html
@@ -10,10 +10,9 @@
   <nav mat-tab-nav-bar>
     <a mat-tab-link [routerLink]="'./map'"
         queryParamsHandling="preserve"
-        [queryParams]="{ 'shakemap-intensity': true }"
         routerLinkActive #map="routerLinkActive"
         [active]="map.isActive">
-      ShakeMap
+      Intensity
     </a>
     <a mat-tab-link [routerLink]="'./metadata'"
         queryParamsHandling="preserve"
