Use eventService.product$ observable, pass shakemap id parameters to interactive map, fix path to interactive map

--- a/src/app/shakemap/map/map.component.html
+++ b/src/app/shakemap/map/map.component.html
@@ -1,9 +1,13 @@
-<ng-container *ngIf="eventService.event$ | async; let event">
+<ng-container *ngIf="eventService.product$ | async; let product">
   <a
-      [routerLink]="'../map'"
-      [queryParams]="{ 'shakemap-intensity': true }">
+      [routerLink]="'../../map'"
+      [queryParams]="{
+        'shakemap-code': product?.code,
+        'shakemap-intensity': true,
+        'shakemap-source': product?.source
+      }">
     <shared-map
-        [overlays]="event | getProduct:'shakemap' | shakemapOverlays"
+        [overlays]="product | shakemapOverlays"
         [showScaleControl]="true">
     </shared-map>
   </a>
