--- a/src/app/shared/mmi/mmi.component.scss
+++ b/src/app/shared/mmi/mmi.component.scss
@@ -62,6 +62,10 @@ $mmiXII-text-color: #000000;
   text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
 }
 
+shared-bubble.mmi {
+  padding: 0.5em 1em;
+}
+
 .roman {
   font-family: $mmi-font-family;
 }
