--- a/src/app/shared/station/station.component.html
+++ b/src/app/shared/station/station.component.html
@@ -6,6 +6,7 @@
 
   <div class="summary">
     <shared-mmi class="intensity"
+      [bubble]="true"
       [intensity]="station.properties.intensity">
     </shared-mmi>
 
@@ -66,7 +67,7 @@
           <mat-cell *matCellDef="let channel">
             {{ channel.pga.value |
                 sharedNumber:2:channel.pga.units }}
-            
+
             <shared-station-flag class="flag" [flag]="channel.pga.flag">
             </shared-station-flag>
           </mat-cell>
@@ -79,7 +80,7 @@
           <mat-cell *matCellDef="let channel">
             {{ channel.pgv.value |
                 sharedNumber:2:channel.pgv.units }}
-            
+
             <shared-station-flag class="flag" [flag]="channel.pgv.flag">
             </shared-station-flag>
           </mat-cell>
@@ -92,7 +93,7 @@
           <mat-cell *matCellDef="let channel">
             {{ channel.psa03.value |
                 sharedNumber:2:channel.psa03.units }}
-            
+
             <shared-station-flag class="flag" [flag]="channel.psa03.flag">
             </shared-station-flag>
           </mat-cell>
@@ -105,7 +106,7 @@
           <mat-cell *matCellDef="let channel">
             {{ channel.psa10.value |
                 sharedNumber:2:channel.psa10.units}}
-            
+
             <shared-station-flag class="flag" [flag]="channel.psa10.flag">
             </shared-station-flag>
           </mat-cell>
@@ -118,7 +119,7 @@
           <mat-cell *matCellDef="let channel">
             {{ channel.psa30.value |
                 sharedNumber:2:channel.psa30.units }}
-            
+
             <shared-station-flag class="flag" [flag]="channel.psa30.flag">
             </shared-station-flag>
           </mat-cell>
