--- a/src/app/executive/shakemap-pin/shakemap-pin.component.html
+++ b/src/app/executive/shakemap-pin/shakemap-pin.component.html
@@ -1,12 +1,12 @@
-<basic-pin *ngIf="product as product"
+<basic-pin
     [link]="link"
     [product]="product"
     [title]="title">
 
-  <div card-content *ngIf="product.properties.maxmmi as mmi">
+  <div card-content *ngIf="product?.properties.maxmmi as mmi">
 
     <dl class="mmi-description">
-      <dt>Intensity</dt>
+      <dt>Estimated Intensity</dt>
       <dd>
         <shared-mmi
           [intensity]="mmi">
