--- a/src/app/shakemap/shakemap/shakemap.component.html
+++ b/src/app/shakemap/shakemap/shakemap.component.html
@@ -11,6 +11,9 @@
     <a mat-tab-link [routerLink]="'./map'"
         queryParamsHandling="preserve"
         routerLinkActive #map="routerLinkActive"
+        [queryParams]="{
+          'shakemap-intensity': true
+        }"
         [active]="map.isActive">
       Intensity
     </a>
