--- a/src/app/shakemap/map/map.component.html
+++ b/src/app/shakemap/map/map.component.html
@@ -1,18 +1,10 @@
-<ng-container *ngIf="eventService?.event$ | async; let event">
-  <ng-container *ngIf="event | getProduct:'shakemap' as shakemap">
-    <ng-container *ngIf="activatedRoute.queryParamMap | async; let params">
-    <a
-        [routerLink]="'../../map'"
-        [queryParams]="{
-          'shakemap-code': shakemap?.code,
-          'shakemap-intensity': true,
-          'shakemap-source': shakemap?.source
-        }">
-      <shared-map
-          [overlays]="event | interactiveMapOverlays:params"
-          [showScaleControl]="true">
-      </shared-map>
-    </a>
-    </ng-container>
-  </ng-container>
+<ng-container *ngIf="event && shakemap">
+  <a
+      [routerLink]="'../../map'"
+      [queryParams]="queryParams">
+    <shared-map
+        [overlays]="shakemap | shakemapOverlays:overlayEnabled"
+        [showScaleControl]="true">
+    </shared-map>
+  </a>
 </ng-container>
