tests running and cleanup

--- a/src/app/shakemap/intensity/intensity.component.html
+++ b/src/app/shakemap/intensity/intensity.component.html
@@ -1,16 +1,14 @@
-<ng-container *ngIf="eventService.product$ | async; let product">
-  <ng-container *ngIf="product; let shakemap">
-    <a
-        [routerLink]="'../../map'"
-        [queryParams]="{
-          'shakemap-code': shakemap?.code,
-          'shakemap-source': shakemap?.source,
-          'shakemap-intensity': true
-        }">
-      <shared-map
-          [overlays]="shakemap | shakemapOverlays:'shakemap-intensity'"
-          [showScaleControl]="true">
-      </shared-map>
-    </a>
-  </ng-container>
+<ng-container *ngIf="eventService.product$ | async; let shakemap">
+  <a
+      [routerLink]="'../../map'"
+      [queryParams]="{
+        'shakemap-code': shakemap?.code,
+        'shakemap-source': shakemap?.source,
+        'shakemap-intensity': true
+      }">
+    <shared-map
+        [overlays]="shakemap | shakemapOverlays:'shakemap-intensity'"
+        [showScaleControl]="true">
+    </shared-map>
+  </a>
 </ng-container>
