--- a/src/app/shakemap/intensity/intensity.component.scss
+++ b/src/app/shakemap/intensity/intensity.component.scss
@@ -2,3 +2,12 @@ shared-map {
     display: block;
     height: 500px;
 }
+
+img {
+    width: 100%;
+    max-width: 600px;
+    margin-top: 1em;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
