cleaned up code

--- a/src/app/executive/ground-failure-pin/ground-failure-pin.component.html
+++ b/src/app/executive/ground-failure-pin/ground-failure-pin.component.html
@@ -4,89 +4,52 @@
   [title]="title">
 
   <div card-content>
+
     <div class="landslides-pin-content">
       <h4>Landslides</h4>
       <div class="material-icons landslides-liquefaction-icon"
           [ngClass]="product.properties['landslide-hazard-alert-color']">
         &#xE564;
       </div>
+
       <div [ngSwitch]="product.properties['landslide-hazard-alert-color']">
-        <ng-container *ngSwitchCase="'green'">
-          <span>Little to no area</span>
-        </ng-container>
-
-        <ng-container *ngSwitchCase="'yellow'">
-          <span>Limited area</span>
-        </ng-container>
-
-        <ng-container *ngSwitchCase="'orange'">
-          <span>Significant area</span>
-        </ng-container>
-
-        <ng-container *ngSwitchCase="'red'">
-          <span>Extensive area</span>
-        </ng-container>
+        <span *ngSwitchCase="'green'">Little to no area</span>
+        <span *ngSwitchCase="'yellow'">Limited area</span>
+        <span *ngSwitchCase="'orange'">Significant area</span>
+        <span *ngSwitchCase="'red'">Extensive area</span>
       </div>
+
       <div [ngSwitch]="product.properties['landslide-population-alert-color']">
-        <ng-container *ngSwitchCase="'green'">
-          <span>No to few people</span>
-        </ng-container>
-
-        <ng-container *ngSwitchCase="'yellow'">
-          <span>Limited people</span>
-        </ng-container>
-
-        <ng-container *ngSwitchCase="'orange'">
-          <span>Significant people</span>
-        </ng-container>
-
-        <ng-container *ngSwitchCase="'red'">
-          <span>Extensive people</span>
-        </ng-container>
+        <span *ngSwitchCase="'green'">No to few people</span>
+        <span *ngSwitchCase="'yellow'">Limited people</span>
+        <span *ngSwitchCase="'orange'">Significant people</span>
+        <span *ngSwitchCase="'red'">Extensive people</span>
       </div>
     </div>
+
     <div class="liquefaction-pin-content">
       <h4>Liquefaction</h4>
       <div class="material-icons landslides-liquefaction-icon"
           [ngClass]="product.properties['liquefaction-hazard-alert-color']">
         &#xEB48;
       </div>
+
       <div [ngSwitch]="product.properties['liquefaction-hazard-alert-color']">
-        <ng-container *ngSwitchCase="'green'">
-          <span>Little to no area</span>
-        </ng-container>
-
-        <ng-container *ngSwitchCase="'yellow'">
-          <span>Limited area</span>
-        </ng-container>
-
-        <ng-container *ngSwitchCase="'orange'">
-          <span>Significant area</span>
-        </ng-container>
-
-        <ng-container *ngSwitchCase="'red'">
-          <span>Extensive area</span>
-        </ng-container>
+        <span *ngSwitchCase="'green'">Little to no area</span>
+        <span *ngSwitchCase="'yellow'">Limited area</span>
+        <span *ngSwitchCase="'orange'">Significant area</span>
+        <span *ngSwitchCase="'red'">Extensive area</span>
       </div>
+
       <div [ngSwitch]=
           "product.properties['liquefaction-population-alert-color']">
-        <ng-container *ngSwitchCase="'green'">
-          <span>No to few people</span>
-        </ng-container>
-
-        <ng-container *ngSwitchCase="'yellow'">
-          <span>Limited people</span>
-        </ng-container>
-
-        <ng-container *ngSwitchCase="'orange'">
-          <span>Significant people</span>
-        </ng-container>
-
-        <ng-container *ngSwitchCase="'red'">
-          <span>Extensive people</span>
-        </ng-container>
+        <span *ngSwitchCase="'green'">No to few people</span>
+        <span *ngSwitchCase="'yellow'">Limited people</span>
+        <span *ngSwitchCase="'orange'">Significant people</span>
+        <span *ngSwitchCase="'red'">Extensive people</span>
       </div>
     </div>
+
   </div>
 </basic-pin>
 
