Rename images and add better legend

--- a/src/app/shakemap/intensity/intensity.component.html
+++ b/src/app/shakemap/intensity/intensity.component.html
@@ -16,7 +16,7 @@
             [showScaleControl]="true">
         </shared-map>
 
-        <img src="./assets/large-intensity-legend.png" alt="Intensity legend">
+        <img src="./assets/shakemap-intensity-legend.png" alt="ShakeMap intensity legend">
       </ng-container>
 
       <ng-template #noOverlay>
