--- a/src/app/ground-failure/summary/summary.component.html
+++ b/src/app/ground-failure/summary/summary.component.html
@@ -18,7 +18,7 @@
 
       <button mat-raised-button
           [routerLink]="'../../map'"
-          [queryParams]="{ 'ground-failure-landslide': true }">
+          [queryParams]="{ 'ground-failure-landslide': true, 'shakemap-intensity': false }">
         View Landslide Map
       </button>
     </section>
@@ -40,7 +40,7 @@
 
       <button mat-raised-button
           [routerLink]="'../../map'"
-          [queryParams]="{ 'ground-failure-liquefaction': true }">
+          [queryParams]="{ 'ground-failure-liquefaction': true, 'shakemap-intensity': false }">
         View Liquefaction Map
       </button>
     </section>
