Remove the much-hated Overlay interface

--- a/src/app/executive/shakemap-pin/shakemap-pin.component.html
+++ b/src/app/executive/shakemap-pin/shakemap-pin.component.html
@@ -9,6 +9,7 @@
       <dt>Estimated Intensity</dt>
       <dd>
         <shared-mmi
+          [bubble]="true"
           [intensity]="mmi">
         </shared-mmi>
       </dd>
