Switch to new overlay pattern

--- a/src/app/shakemap/pga/pga.component.html
+++ b/src/app/shakemap/pga/pga.component.html
@@ -5,7 +5,8 @@
       [queryParams]="{
         'shakemap-code': shakemap?.code,
         'shakemap-source': shakemap?.source,
-        'shakemap-pga': true
+        'shakemap-pga': true,
+        'shakemap-intensity': false
       }">
 
     <shared-map
