--- a/src/app/shakemap/pgv/pgv.component.html
+++ b/src/app/shakemap/pgv/pgv.component.html
@@ -5,7 +5,8 @@
       [queryParams]="{
         'shakemap-code': shakemap?.code,
         'shakemap-source': shakemap?.source,
-        'shakemap-pgv': true
+        'shakemap-pgv': true,
+        'shakemap-intensity': false
       }">
 
     <shared-map
