Added link to an event w/ OAF.

--- a/src/app/event-page/event-page/event-page.component.html
+++ b/src/app/event-page/event-page/event-page.component.html
@@ -13,6 +13,7 @@
         <app-navigation-item display="Not Found" navRouterLink="/notfound"></app-navigation-item>
         <app-navigation-item display="Unknown" navRouterLink="/unknown"></app-navigation-item>
         <app-navigation-item display="us1000chhc" navRouterLink="/us1000chhc"></app-navigation-item>
+        <app-navigation-item display="OAF Example" navRouterLink="/us20005j32/oaf"></app-navigation-item>
         <app-navigation-item display="us2000crmu" navRouterLink="/us2000crmu"></app-navigation-item>
         <app-navigation-item display="us2000cmy3" navRouterLink="/us2000cmy3/region-info"></app-navigation-item>
         <app-navigation-item display="nc72733850 (deleted)" navRouterLink="/nc72733850"></app-navigation-item>
