--- a/src/app/oaf/commentary/commentary.component.html
+++ b/src/app/oaf/commentary/commentary.component.html
@@ -1,3 +1,9 @@
-<p>
-  commentary works!
-</p>
+<ng-container *ngIf="eventService.product$ | async as product; else noProduct">
+  <pre>
+    {{ product | json }}
+  </pre>
+</ng-container>
+
+<ng-template #noProduct>
+  <p>No product to display.</p>
+</ng-template>
