Corrected "Little or no" -> "Little to no" text

--- a/src/app/ground-failure/hazard-alert/hazard-alert.component.html
+++ b/src/app/ground-failure/hazard-alert/hazard-alert.component.html
@@ -24,7 +24,7 @@
           }; let locals">
 
       <ng-container *ngSwitchCase="'green'">
-        Little or no {{ locals.none }} is expected,
+        Little to no {{ locals.none }} is expected,
         but could still have occurred in highly susceptible areas.
       </ng-container>
 
