Corrected "important" -> "significant" text

--- a/src/app/ground-failure/hazard-alert/hazard-alert.component.html
+++ b/src/app/ground-failure/hazard-alert/hazard-alert.component.html
@@ -35,7 +35,7 @@
 
       <ng-container *ngSwitchCase="'orange'">
         {{ locals.label }} triggered by this earthquake {{ locals.verb }}
-        estimated to be important in number and (or) spatially extensive.
+        estimated to be significant in number and (or) spatially extensive.
       </ng-container>
 
       <ng-container *ngSwitchCase="'red'">
