Corrected "restricted" -> "limited" text

--- a/src/app/ground-failure/hazard-alert/hazard-alert.component.html
+++ b/src/app/ground-failure/hazard-alert/hazard-alert.component.html
@@ -30,17 +30,17 @@
 
       <ng-container *ngSwitchCase="'yellow'">
         {{ locals.label }} triggered by this earthquake {{ locals.verb }}
-        estimated to be restricted in number and (or) spatial extent.
+        estimated to be limited in number and (or) spatial extent.
       </ng-container>
 
       <ng-container *ngSwitchCase="'orange'">
         {{ locals.label }} triggered by this earthquake {{ locals.verb }}
-        estimated to be significant in number and (or) spatially extensive.
+        estimated to be significant in number and (or) spatial extent.
       </ng-container>
 
       <ng-container *ngSwitchCase="'red'">
         {{ locals.label }} triggered by this earthquake {{ locals.verb }}
-        estimated to be extremely large in number and (or) spatial extent.
+        estimated to be extremely large in number and (or) spatially extensive.
       </ng-container>
     </ng-container>
   </figcaption>
