Corrected "near/slope" -> "in/areas" text

--- a/src/app/ground-failure/population-alert/population-alert.component.html
+++ b/src/app/ground-failure/population-alert/population-alert.component.html
@@ -24,7 +24,7 @@
 
         <ng-container *ngSwitchCase="'green'">
           low, but {{ madlibs.label }} damage or fatalities
-          are still possible near highly susceptible slopes.
+          are still possible in highly susceptible areas.
         </ng-container>
 
         <ng-container *ngSwitchCase="'yellow'">
