Remove 'todo' in nav and rename dyfi module

--- a/src/app/event-page/navigation/navigation.component.html
+++ b/src/app/event-page/navigation/navigation.component.html
@@ -20,7 +20,7 @@
     <app-navigation-item display="Felt Report - Tell Us!"
         navRouterLink="tellus"></app-navigation-item>
     <app-navigation-item *ngIf="event.hasProducts('dyfi')"
-        display="Did You Feel It?" class="not-supported"
+        display="Did You Feel It?"
         navRouterLink="dyfi"></app-navigation-item>
     <app-navigation-item *ngIf="event.hasProducts('shakemap')"
         display="ShakeMap"
