Create Pager Module

--- a/src/app/event-page/navigation/navigation.component.html
+++ b/src/app/event-page/navigation/navigation.component.html
@@ -26,8 +26,7 @@
         display="ShakeMap"
         navRouterLink="shakemap"></app-navigation-item>
     <app-navigation-item *ngIf="event.hasProducts('losspager')"
-        display="PAGER" class="not-supported"
-        navRouterLink="pager"></app-navigation-item>
+        display="PAGER" navRouterLink="pager"></app-navigation-item>
     <app-navigation-item *ngIf="event.hasProducts('ground-failure')"
         display="Ground Failure"
         navRouterLink="ground-failure"></app-navigation-item>
