Add population exposure table to the pager module. Update PagerXml service to make displaying the content easier. Add pipe to format roman numerals in shared-mmi

--- a/src/app/pager/pager/pager.component.html
+++ b/src/app/pager/pager/pager.component.html
@@ -61,7 +61,7 @@
               </figcaption>
             </figure>
           </ng-container>
-          <pager-population></pager-population>
+          <pager-population [pager]="pager"></pager-population>
         </div>
 
         <div class="column one-of-two">
