--- a/src/app/shared/mmi/mmi.component.scss
+++ b/src/app/shared/mmi/mmi.component.scss
@@ -72,7 +72,7 @@ shared-bubble.mmi {
 
 .mmiI {
   background-color: $mmiI !important;
-  box-shadow: 0 0 1px #666;
+  box-shadow: inset 0 0 1px #666;
   color: $mmiI-text-color !important;
 }
 
