Create PagerCitiesComponent scaffold

--- a/src/app/pager/pager/pager.component.html
+++ b/src/app/pager/pager/pager.component.html
@@ -77,10 +77,7 @@
               {{ pager.comments.effects }}
             </p>
           </ng-container>
-          <!-- TODO, Replace with PagerCitiesComponent -->
-          <div class="exposure-city">
-            <p class="alert info">TODO, add PagerCitiesComponent</p>
-          </div>
+          <pager-cities [pager]="pager"></pager-cities>
         </div>
       </div>
     </div>
